# webmusic

./: AUTHORS  CMakeLists.txt  CNAME  PKGBUILD  README.md  index.html  meson.build  meson_options.txt  params.json  webmusic.css
cmake/: FindVala.cmake  GResource.cmake  GSettings.cmake  UseVala.cmake  WebMusic.cmake
data/: CMakeLists.txt  ShellSearchProvider2.xml  about.ini  meson.build  org.WebMusic.SearchProvider.data.gresource.xml  org.WebMusic.SearchProvider.search-provider.ini  org.WebMusic.SearchProvider.service.in  org.WebMusic.desktop.in  org.WebMusic.gschema.xml  org.WebMusic.service.in
man/: CMakeLists.txt  help2man  include.webmusic  meson.build
po/: CMakeLists.txt  POTFILES.in  de.po  en.po  meson.build  webmusic.pot
src/: CMakeLists.txt  meson.build
src/Browser/: AppWindow.vala  Browser.vala  CMakeLists.txt  WebMusic.vala  meson.build
src/Browser/Dialogs/: AboutDialog.vala  ClearDataDialog.vala  ErrorDialog.vala  PreferencesDialog.vala
src/Browser/Osd/: ControlsActor.vala  CoverStage.vala
src/Browser/Plugins/: IPlugin.vala  MPRIS.vala  MiniWidget.vala  Notification.vala
src/Browser/Widgets/: ImageOverlay.vala  OsdToolbar.vala  RepeatButton.vala
src/Browser/Widgets/Osd/: ControlsActor.vala  CoverStage.vala
src/Browser/Widgets/Ui/: RepeatButton.vala
src/Lib/: Api.vala  CMakeLists.txt  Directory.vala  FileCache.vala  IPlayer.vala  LibSearchProvider.vala  Namespace.vala  Player.vala  PlayerApi.vala  PlaylistApi.vala  PluginManager.vala  Service.vala  VariantHelper.vala  meson.build
src/Plugins/: CMakeLists.txt  meson.build
src/Plugins/Notification/: CMakeLists.txt  Notification.vala  meson.build  notification.plugin
src/Resources/: webmusic.gresource.xml
src/Resources/Services/: api.js
src/Resources/Services/deezer/: deezer.ini  integration.js  searchprovider.js
src/Resources/Services/example/: example.html  example.ini.in  integration.js
src/Resources/Services/jamendo/: jamendo.ini
src/Resources/ui/: application-menu.ui  application-window.ui  clear-data-dialog.ui  image-overlay.ui  main.ui  mini-window.ui  osd-toolbar.ui  osd.ui  popover-menu.ui  preferences-dialog.ui  webmusic.css
src/SearchProvider/: CMakeLists.txt  config.js  meson.build  org.WebMusic.SearchProvider.in  org.WebMusic.SearchProvider.src.gresource.xml  searchProvider.js  service.js  staticSearchProvider.js
src/Webextension/: CMakeLists.txt  DBusApi.vala  FileCache.vala  IApiAdapter.vala  IJsAdapter.vala  JavascriptContext.vala  JavascriptMusicPlayer.vala  JsAdapter.vala  JsApi.vala  Player.vala  WebMusicPlayer.vala  WebMusicWebExtension.vala  meson.build
src/Webextension/JsInterface/: JsConverter.vala  JsObject.vala
src/Webextension/Plugins/: IPlugin.vala  MPRIS.vala  Notification.vala
vapi/: WebKitVersion.vapi  config.vapi  javascriptcore.vapi
